--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <title>MyProjec</title>
+        <title>Cyenan</title>
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
         <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
         <%= csrf_meta_tags %>
@@ -16,7 +16,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-    <%= link_to 'Cyenan', root_path, class:'navbar-brand' %>
+      <%= link_to root_path, class: 'navbar-brand' do %>
+      <i class="fa fa-users"></i>
+      Cyenan
+      <% end %>
     </div>
       
       
