--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,11 @@
     </div>
   </div>
 </nav>
-
 <div class="container">
+<% flash.each do |key,value| %>
+<%= content_tag :div, value, class: "alert alert-#{key}" %>
+<% end %>
+
   <%= yield %>
 </div>
 </body>
