--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,27 @@
 <h1>Welcome to Cyenan</h1>
 <h3>A membership site where enterpreneours can meet developers</h3>
 </div>
+<div class="row">
+    
+   <div class="col-md-6">
+       <div class="well">
+          <h2 class="text-center"> Basic Membership</h2>
+          <h4>Sign up for free and get great basic access to our community.</h4>
+          <%= link_to "Sign up with Basic", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block'%>
+       </div>
+       
+   </div>
+    
+    <div class="col-md-6">
+        <div class="well">
+           <h2 class="text-center">Pro Membership</h2>
+           <h4>Sign up for 10/month,get access to our community and  contacts.</h4>
+           <%= link_to "Sign up with Pro", new_user_registration_path, class: 'btn btn-success btn-lg btn-block'%>
+        </div>
+        
+    </div>
+    
+    
+    
+    
+</div>
