Added plan variables and params to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
        <div class="well">
           <h2 class="text-center"> Basic Membership</h2>
           <h4>Sign up for free and get great basic access to our community.</h4>
-          <%= link_to "Sign up with Basic", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block'%>
+          <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block'%>
        </div>
        
    </div>
@@ -17,7 +17,7 @@
         <div class="well">
            <h2 class="text-center">Pro Membership</h2>
            <h4>Sign up for 10/month,get access to our community and  contacts.</h4>
-           <%= link_to "Sign up with Pro", new_user_registration_path, class: 'btn btn-success btn-lg btn-block'%>
+           <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block'%>
         </div>
         
     </div>
