--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Create your Profile!","#' %>
+
 <div class="jumbotron text-center">
 <h1>Welcome to Cyenan</h1>
 <h3>A membership site where enterpreneours can meet developers</h3>
