--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,8 @@
-<%= @user %>
+<%= @user %><br/>
+<%= @user.profile.first_name %> <%= @user.profile.last_name %>
+<% if current_user.plan_id == 2 %>
+    <%= @user.profile.job_title %><br/>
+    <%= @user.profile.phone_number %><br/>
+<%= @user.profile.contact_email %><br/>
+<% end %>
+<%= @user.profile.description %><br/>
