--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,14 +11,16 @@
                   <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block' %>
                   <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
                 <% else %>
+                   <p class="text-center">Create your profile to share your information with the community</p>
                    <%= link_to "Create your profile!", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
                 <% end %>
+                
             </div>
         </div> 
         <div class="col-md-6">
            <div class="well">
                <h2 class="text-center"> The Community</h2>
-               <p class="text-center">meet other developers here, enterpreneur, and investors</p><br/>
+               <p class="text-center">meet other developers here, enterpreneurs, and investors</p><br/>
                <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
            </div>
         </div>
