Changed spelling code error on new html render form

--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -3,7 +3,7 @@
         <h1 class="text-center">Create Your Profile</h1>
         <p class="text-center">Be a part of the Cayenan community and fill out your profile</p>
         <div class="well">
-            <%= render '_form' %>
+            <%= render 'form' %>
         </div>
         
     </div>
