--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,49 +2,44 @@
 <h1>Welcome to Cyenan</h1>
 <h3>A membership site where enterpreneours can meet developers</h3>
 </div>
+
 <div class="row">
     <% if user_signed_in? %>
         <div class="col-md-6">
             <div class="well">
-                <h2 class="text-center"> Your Profile</h2>
+                 <h2 class="text-center"> Your Profile</h2>
                 <% if current_user.profile %>
-                  <%= link_to "Edit your profile", edit_user_profile_path(user_id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
-                  <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
+                   <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block' %>
+                   <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
                 <% else %>
-                   <p class="text-center">Create your profile to share your information with the community</p>
-                   <%= link_to "Create your profile!", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
+                    <%= link_to "Create your profile!", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
                 <% end %>
-                
             </div>
-        </div> 
+        </div>
+        
         <div class="col-md-6">
-           <div class="well">
-               <h2 class="text-center"> The Community</h2>
-               <p class="text-center">meet other developers here, enterpreneurs, and investors</p><br/>
-               <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
-           </div>
+            <div class="well">
+                <h2 class="text-center"> The Community</h2>
+                <p>Meet other developers, enterpreneurs, and investors</p><br/>
+                <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
+            </div>
         </div>
-           
     <% else %>
-   <div class="col-md-6">
-       <div class="well">
-          <h2 class="text-center"> Basic Membership</h2>
-          <h4>Sign up for free and get great basic access to our community.</h4>
-          <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block'%>
-       </div>
-       
-   </div>
-    
-    <div class="col-md-6">
-        <div class="well">
-           <h2 class="text-center">Pro Membership</h2>
-           <h4>Sign up for 10/month,get access to our community and  contacts.</h4>
-           <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block'%>
-        </div>
-        <% end %>
-    </div>
-    
-    
-    
-    
+            <div class="col-md-6">
+                <div class="well">
+                  <h2 class="text-center"> Basic Membership</h2>
+                  <h4>Sign up for free and get great basic access to our community.</h4>
+                  <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block'%>
+                </div>
+               
+            </div>
+            
+            <div class="col-md-6">
+                <div class="well">
+                   <h2 class="text-center">Pro Membership</h2>
+                   <h4>Sign up for 10/month,get access to our community and  contacts.</h4>
+                   <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block'%>
+                </div>
+            </div>
+   <% end %>
 </div>
