--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
             <div class="well">
                 <h2 class="text-center"> The Community</h2>
                 <p>Meet other developers, enterpreneurs, and investors</p><br/>
-                <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
+                <%= link_to "Visit the community", users_path, class: 'btn btn-default btn-lg btn-block' %>
             </div>
         </div>
     <% else %>
