--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,11 @@
+/* Users index Page Styles */
+.user-show-avatar{
+    
+    height: 128px;
+    width: 128px;
+ }
+
+
 .job_title_icon {
    display: inline-block;
    width: 30px; 
@@ -26,5 +34,14 @@
 .well.content-Info{
    background-color: #5bc0de;
    border-color: #46b8da; 
-  
+}
+
+/* Users index Page Styles */
+.user-index-avatar{
+    border-radius: 50%;
+}
+
+.well.white-bg{
+    
+    background-color: white;
 }
