Added helpful copy

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,3 @@
 <h2>About Us</h2>
+<p>Welcome to Cayenan. We are a community of  great developers, enterpreneurs, and investors.Our goal is to meeting
+one another and sharing idears</p>
