--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
+        <h1 class="text-center">Cyenan Community</h1>
+        <p>Users must fill out profile to be visible.</p>
         <ul class="list-unstyled">
             <% @users.each do |user| %>
                 <% if user.profile %>
