--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
+        <h1 class="text-center">Contact Us</h1>
+        <p class="text-center">Welcome to reach out for questions or comments.</p>
         <div class="well">
             <%= form_for @contact do |f| %>
             <div class="form-group">
