--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
         <title>Cyenan</title>
-        
+          <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
           <%= stylesheet_link_tag    'application', media: 'all' %>
           <%= javascript_include_tag "https://js.stripe.com/v2/", type: 'text/javascript' %>
           <%= javascript_include_tag 'application' %>
           <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
+          
+          <!-- FOR CustOM Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  
+      <!--  THE Plugin CSS -->
+    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
+     <!-- tHE Custom CSS -->
+    <link rel="stylesheet" href="css/creative.css" type="text/css">
           <%= csrf_meta_tags %>
 </head>
 <body>
